--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ plausible:
 # A picture of you, square(!), at least 180x180 pixels, more is better. Recommended file size < 100 KB.
 # Leave empty for generic placeholder image.
 # You can use your GitHub image:
-avatar: "images/avatar.svg"
+avatar: "https://avatars0.githubusercontent.com/u/151482058"
 #avatar: "images/jonathan_doe.jpg"
 #avatar:
 
