--- a/_config.yml
+++ b/_config.yml
@@ -181,6 +181,5 @@ links:
 # Extra HTML which will be displayed below the links. Keep it short. Leave empty to disable.
 #extra_html:
 extra_html: >
-    t+是神，我勒个豆，你这都不知道
-
+komeiji koishi
 #EOF
